[package]
build = "build.rs"
edition = "2021"
name = "rusty-windows"
version = "0.1.0"
target = "win32"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
registry = "1.2.1"
windows-service = "0.5.0"

[build-dependencies]
winres = "0.1.12"